# useasy

./: .verification.dify.json  PRIVACY.md  README.md  manifest.yaml  pyproject.toml  requirements.txt
models/: _common.py  constant.py
models/llm/: _position.yaml  deepseek-r1.yaml  deepseek-v3.1.yaml  deepseek-v3.2.yaml  deepseek-v3.yaml  doubao-api.yaml  doubao-seed-1.6-flash.yaml  glm-5.yaml  llm.py  qwen-flash.yaml  qwen-long.yaml  qwen-max-latest.yaml  qwen-max-longcontext.yaml  qwen-max.yaml  qwen-plus-chat.yaml  qwen-plus-latest.yaml  qwen-plus.yaml  qwen-vl-max-latest.yaml  qwen-vl-max.yaml  qwen-vl-plus-latest.yaml  qwen-vl-plus.yaml  qwen2.5-0.5b-instruct.yaml  qwen2.5-1.5b-instruct.yaml  qwen2.5-14b-instruct-1m.yaml  qwen2.5-14b-instruct.yaml  qwen2.5-32b-instruct.yaml  qwen2.5-3b-instruct.yaml  qwen2.5-72b-instruct.yaml  qwen2.5-7b-instruct-1m.yaml  qwen2.5-7b-instruct.yaml  qwen2.5-vl-3b-instruct.yaml  qwen2.5-vl-72b-instruct.yaml  qwen2.5-vl-7b-instruct.yaml  qwen3-0.6b.yaml  qwen3-1.7b.yaml  qwen3-14b.yaml  qwen3-235b-a22b-instruct-2507.yaml  qwen3-235b-a22b-thinking-2507.yaml  qwen3-235b-a22b.yaml  qwen3-30b-a3b-instruct-2507.yaml  (+14 more)
models/rerank/: rerank.py
models/speech2text/: speech2text.py
models/text_embedding/: multimodal-embedding-v1.yaml  text-embedding-v1.yaml  text-embedding-v2.yaml  text-embedding-v3.yaml  text-embedding-v4.yaml  text_embedding.py
models/tts/: tts.py
provider/: useasy.py  useasy.yaml
tests/: test_embedding_openai_compatible.py  test_llm_call.py  test_rerank_new_api.py
